force-app/main/default/objects/TALEXO_Quote__c/TALEXO_Quote__c.object-meta.xml
<CustomObject>
    <label>Nexus Quote</label>
    <nameField>
        <displayFormat>QUOTE-{0000}</displayFormat>
        <label>Quote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nexus Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>