force-app/main/default/objects/TALEXO_Quote__c/fields/AcceptanceProbability__c.field-meta.xml
<CustomField>
    <fullName>AcceptanceProbability__c</fullName>
    <description
  >AI-calculated probability (0-100) that the customer will accept this quote.</description>
    <label>Acceptance Probability (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>