force-app/main/default/objects/TALEXO_Quote__c/fields/AIReason__c.field-meta.xml
<CustomField>
    <fullName>AIReason__c</fullName>
    <description
  >Explanation from the AI engine for the AcceptanceProbability score.</description>
    <label>AI Scoring Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>