force-app/main/default/objects/TALEXO_Quote__c/fields/BulkDiscount__c.field-meta.xml
<CustomField>
    <fullName>BulkDiscount__c</fullName>
    <defaultValue>10</defaultValue>
    <description
  >Volume discount percentage applied to all line items. Default 10% for B2B bulk orders.</description>
    <label>Bulk Discount (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>