force-app/main/default/objects/TALEXO_Quote__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description
  >The date the contract expires. Used as the numerator ceiling for proration calculations.</description>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>