force-app/main/default/objects/TALEXO_Quote__c/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description
  >The date the contract went active (signature date). Used as the denominator for proration calculations.</description>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>