force-app/main/default/objects/TALEXO_Quote__c/fields/CounterMessage__c.field-meta.xml
<CustomField>
    <fullName>CounterMessage__c</fullName>
    <description
  >Message submitted by customer alongside their counter-offer price.</description>
    <label>Counter Offer Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>