force-app/main/default/objects/TALEXO_Quote__c/fields/CustomerCounterPrice__c.field-meta.xml
<CustomField>
    <fullName>CustomerCounterPrice__c</fullName>
    <description
  >Price proposed by the customer as a counter-offer during negotiation.</description>
    <label>Customer Counter Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>