force-app/main/default/objects/TALEXO_Quote__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Nexus CPQ — required field</description>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>