force-app/main/default/objects/TALEXO_Quote__c/fields/DocuSign_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Sent_At__c</fullName>
    <description
  >Timestamp when the DocuSign envelope was dispatched for this quote.</description>
    <label>DocuSign Sent At</label>
    <type>DateTime</type>
</CustomField>