force-app/main/default/objects/TALEXO_Quote__c/fields/DvelopEnvelopeId__c.field-meta.xml
<CustomField>
    <fullName>DvelopEnvelopeId__c</fullName>
    <description
  >d.velop signing envelope ID — populated when both parties are invited to sign electronically</description>
    <label>D.velop Envelope ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>