force-app/main/default/objects/TALEXO_Quote__c/fields/EscalationComboA__c.field-meta.xml
<CustomField>
    <fullName>EscalationComboA__c</fullName>
    <label>Escalation Combo A (AI Proposal)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>