force-app/main/default/objects/TALEXO_Quote__c/fields/EscalationComboB__c.field-meta.xml
<CustomField>
    <fullName>EscalationComboB__c</fullName>
    <label>Escalation Combo B (AI Proposal)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>