force-app/main/default/objects/TALEXO_Quote__c/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <description>Nexus CPQ — required field</description>
    <fullName>ExpirationDate__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>