force-app/main/default/objects/TALEXO_Quote__c/fields/ExternalNegotiationId__c.field-meta.xml
<CustomField>
    <fullName>ExternalNegotiationId__c</fullName>
    <description
  >ID returned by the external negotiation platform after quote submission (Option A versioning).</description>
    <externalId>true</externalId>
    <label>External Negotiation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>