force-app/main/default/objects/TALEXO_Quote__c/fields/FinalNegotiatedPrice__c.field-meta.xml
<CustomField>
    <fullName>FinalNegotiatedPrice__c</fullName>
    <label>Final Negotiated Price</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description
  >The final agreed price synced back from the external negotiation platform after negotiation is complete.</description>
</CustomField>