force-app/main/default/objects/TALEXO_Quote__c/fields/FloorPrice__c.field-meta.xml
<CustomField>
    <fullName>FloorPrice__c</fullName>
    <description>Minimum acceptable price set by admin when sending the quote. The auto-negotiation engine uses this to evaluate customer counters: auto-accept if above floor, auto-counter if within 15%, auto-reject if too low.</description>
    <label>Floor Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>