force-app/main/default/objects/TALEXO_Quote__c/fields/GeneralTerms__c.field-meta.xml
<CustomField>
    <fullName>GeneralTerms__c</fullName>
    <label>General Terms &amp; Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>