force-app/main/default/objects/TALEXO_Quote__c/fields/GrandTotal__c.field-meta.xml
<CustomField>
    <fullName>GrandTotal__c</fullName>
    <label>Grand Total</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>