force-app/main/default/objects/TALEXO_Quote__c/fields/Is_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Is_Amendment__c</fullName>
    <description>True when this quote is an amendment (Avenant) to an existing contract.</description>
    <label>Is Amendment</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>