force-app/main/default/objects/TALEXO_Quote__c/fields/Is_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Is_Renewal__c</fullName>
    <description>True when this quote is an auto-generated renewal of an expiring contract.</description>
    <label>Is Renewal</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>