force-app/main/default/objects/TALEXO_Quote__c/fields/IsFinalOffer__c.field-meta.xml
<CustomField>
    <fullName>IsFinalOffer__c</fullName>
    <description
  >Set by admin to signal this is the final offer. Customer cannot counter — can only Accept or Reject.</description>
    <label>Is Final Offer</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>