force-app/main/default/objects/TALEXO_Quote__c/fields/IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>IsPrimary__c</fullName>
    <label>Primary Quote</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description
  >Only one quote per Opportunity can be Primary. Controls which quote is synced to the Opportunity amount.</description>
</CustomField>