force-app/main/default/objects/TALEXO_Quote__c/fields/MessageThread__c.field-meta.xml
<CustomField>
    <fullName>MessageThread__c</fullName>
    <description
  >JSON array of chat messages between customer and sales rep. Format: [{id, sender (customer|sales), text, time}]</description>
    <label>Message Thread</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>