force-app/main/default/objects/TALEXO_Quote__c/fields/MRR__c.field-meta.xml
<CustomField>
    <fullName>MRR__c</fullName>
    <description>Monthly Recurring Revenue — sum of all recurring line items normalised to monthly (annual items divided by 12).</description>
    <label>MRR (Monthly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>