force-app/main/default/objects/TALEXO_Quote__c/fields/NegotiationRound__c.field-meta.xml
<CustomField>
    <fullName>NegotiationRound__c</fullName>
    <description
  >Tracks which round of the price negotiation this quote version is in. Starts at 0, increments each time either party counters. Max 3 rounds enforced by Apex.</description>
    <label>Negotiation Round</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>