force-app/main/default/objects/TALEXO_Quote__c/fields/NegotiationStatus__c.field-meta.xml
<CustomField>
    <fullName>NegotiationStatus__c</fullName>
    <label>Negotiation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>true</default><label
        >Draft</label></value>
            <value><fullName>Submitted</fullName><default>false</default><label
        >Submitted to Platform</label></value>
            <value><fullName>In Negotiation</fullName><default
        >false</default><label>In Negotiation</label></value>
            <value><fullName>Counter Received</fullName><default
        >false</default><label>Counter Received</label></value>
            <value><fullName>Final</fullName><default>false</default><label
        >Final</label></value>
        </valueSetDefinition>
    </valueSet>
    <description
  >Tracks the external negotiation lifecycle stage of this quote.</description>
</CustomField>