force-app/main/default/objects/TALEXO_Quote__c/fields/OneTimeTotal__c.field-meta.xml
<CustomField>
    <fullName>OneTimeTotal__c</fullName>
    <description
  >Net total of all one-time line items after discount.</description>
    <label>One-Time Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>