force-app/main/default/objects/TALEXO_Quote__c/fields/Original_Quote__c.field-meta.xml
<CustomField>
    <fullName>Original_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The signed quote this amendment was generated from.</description>
    <label>Original Quote</label>
    <referenceTo>TALEXO_Quote__c</referenceTo>
    <relationshipName>Amendment_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>