force-app/main/default/objects/TALEXO_Quote__c/fields/PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerms__c</fullName>
    <description
  >Standard B2B payment terms applied to this quote. Default: Net 30.</description>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net 30</fullName>
                <default>true</default>
                <label>Net 30</label>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Net 90</fullName>
            </value>
            <value>
                <fullName>Due on Receipt</fullName>
            </value>
            <value>
                <fullName>50% Upfront</fullName>
                <label>50% Upfront / 50% on Delivery</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>