force-app/main/default/objects/TALEXO_Quote__c/fields/Proration_Factor__c.field-meta.xml
<CustomField>
    <fullName>Proration_Factor__c</fullName>
    <description
  >Ratio of remaining days to total contract days. E.g. 0.5 = half the contract remains. Applied to line item prices in amendment quotes.</description>
    <formula
  >IF(Total_Contract_Days__c &gt; 0, Remaining_Days__c / Total_Contract_Days__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proration Factor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>