force-app/main/default/objects/TALEXO_Quote__c/fields/RecurringTotal__c.field-meta.xml
<CustomField>
    <fullName>RecurringTotal__c</fullName>
    <description
  >Net total of all recurring line items after discount (full contract period).</description>
    <label>Recurring Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>