force-app/main/default/objects/TALEXO_Quote__c/fields/Remaining_Days__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Days__c</fullName>
    <description
  >Days remaining from today to contract end date. Zero if contract has expired.</description>
    <formula
  >IF(Contract_End_Date__c &gt; TODAY(), Contract_End_Date__c - TODAY(), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>