force-app/main/default/objects/TALEXO_Quote__c/fields/Renewal_Of_Quote__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Of_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The original signed quote this renewal was generated from.</description>
    <label>Renewal Of Quote</label>
    <referenceTo>TALEXO_Quote__c</referenceTo>
    <relationshipName>Renewal_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>