force-app/main/default/objects/TALEXO_Quote__c/fields/RequestedPaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>RequestedPaymentTerms__c</fullName>
    <label>Requested Payment Terms</label>
    <length>50</length>
    <type>Text</type>
</CustomField>