force-app/main/default/objects/TALEXO_Quote__c/fields/RequestedValidityDays__c.field-meta.xml
<CustomField>
    <fullName>RequestedValidityDays__c</fullName>
    <label>Requested Validity (Days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>