force-app/main/default/objects/TALEXO_Quote__c/fields/SignatureDeadlineDays__c.field-meta.xml
<CustomField>
    <fullName>SignatureDeadlineDays__c</fullName>
    <label>Signature Deadline (Days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>