force-app/main/default/objects/TALEXO_Quote__c/fields/SubmittedAt__c.field-meta.xml
<CustomField>
    <fullName>SubmittedAt__c</fullName>
    <description
  >Timestamp when the quote was submitted to the external negotiation platform.</description>
    <label>Submitted to Negotiation At</label>
    <type>DateTime</type>
</CustomField>