force-app/main/default/objects/TALEXO_Quote__c/fields/Total_Contract_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Days__c</fullName>
    <description
  >Total duration of the contract in days. Defaults to 365 if dates not set.</description>
    <formula
  >IF(Contract_End_Date__c != null &amp;&amp; Contract_Start_Date__c != null, Contract_End_Date__c - Contract_Start_Date__c, 365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Contract Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>