force-app/main/default/objects/TALEXO_Quote__c/fields/VersionNumber__c.field-meta.xml
<CustomField>
    <fullName>VersionNumber__c</fullName>
    <defaultValue>1</defaultValue>
    <description
  >Version counter synced back from the external negotiation platform.</description>
    <label>Quote Version</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>