force-app/main/default/objects/TALEXO_Quote__c/fields/VolumeDiscountApplied__c.field-meta.xml
<CustomField>
    <fullName>VolumeDiscountApplied__c</fullName>
    <description
  >True when the system automatically applied a volume-based discount on this quote.</description>
    <label>Volume Discount Applied</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
    <!-- v2 -->
</CustomField>