force-app/main/default/objects/TALEXO_Quote__c/listViews/All_Quotes.listView-meta.xml
<ListView>
    <fullName>All_Quotes</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>GrandTotal__c</columns>
    <columns>ExpirationDate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Quotes</label>
</ListView>